4th-year/compiler-construction/compiler-construction-assignment-1/tests/negative-tests/invalid-variables.ccl
main
{
    // should produce errors:
    const isLessThan:boolean = (5 < 4);
    const fiveOrFour:boolean = (5 || 4);

    var number;
}